--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,1 +1,69 @@
+.banner__limit { 
+    position: relative;
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
+}
 
+.banner {
+    position: relative; 
+    background-image: url("/banner.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+/* Контент на баннере */
+.banner__content {
+    position: relative;
+    z-index: 2; 
+    color: white;
+    padding: 20px;
+    margin-left: 160px; 
+    text-align: left;
+}
+
+.banner__content h1 {
+    font-size: 60px; 
+    line-height: 1.2;
+    margin: 0 0 10px;
+    max-width: 50%; 
+    white-space: pre-line; 
+}
+
+@media (max-width: 768px) {
+    .banner__limit {
+        height: 400px; 
+    }
+
+    .banner__content h1 {
+        font-size: 100px;
+    }
+    
+    .banner__content p {
+        font-size: 1000px !important; 
+        margin: 0 0 20px;
+    }    
+
+    .banner__content__button {
+        background-color: yellow;
+        color: white;
+        border: none;
+        border-radius: 50px;
+        padding: 15px 30px;
+        font-size: 24px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    
+    .banner__content__button:hover {
+        background-color: darkgoldenrod;
+    }
+    
+    .banner__details {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
