--- a/app/page.module.css
+++ b/app/page.module.css
@@ -42,8 +42,8 @@
         font-size: 100px;
     }
     
-    .banner__content p {
-        font-size: 1000px !important; 
+    .banner__content h2 {
+        font-size: 40px !important; 
         margin: 0 0 20px;
     }    
 
