добавила секцию брендов

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -48,7 +48,7 @@
     }    
 
     .banner__content__button {
-        background-color: yellow;
+        background-color: darkgoldenrod;
         color: white;
         border: none;
         border-radius: 50px;
