--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,71 @@
+body {
+    font-family: 'Inter', sans-serif; 
+}
+
+.categories-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    justify-content: flex-start; 
+    width: 1366px; 
+    height: 428px;
+    margin: 0 auto; 
+}
+
+.header {
+    margin-bottom: 20px; 
+}
+
+.title {
+    font-weight: bold; 
+    font-size: 48px; 
+    line-height: 48px; 
+    color: #FFC85E; 
+}
+
+.subtitle {
+    font-size: 24px; 
+    line-height: 24px; 
+    font-weight: 300; 
+}
+
+.categories-wrapper {
+    display: flex; 
+    justify-content: flex-start; 
+    flex-wrap: nowrap; /* Запрет на перенос карточек на новую строку */
+}
+
+.category-card {
+    text-align: center;
+    margin-right: 15px; /* Отступ между карточками справа */
+    text-decoration: none;
+    color: black; 
+    background-color: #f9f6f2; 
+    width: 250px; 
+    height: 291px; 
+    border-radius: 10px; 
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-end; 
+    border-radius: 20px 20px 20px 20px;
+}
+
+.category-image {
+    width: 100%; 
+    height: 250px; 
+    border-radius: 10px 10px 0 0; 
+}
+
+.category-name {
+    margin-top: auto;
+    font-size: 16px; 
+}
+
+.title span {
+    color: #FFC85E; /* Цвет для "КАТЕГОРИИ" */
+}
+
+.title .products {
+    color: black; /* Черный цвет для "ТОВАРОВ" */
+}
 
