second step to merge categories

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,13 @@ body {
     color: black; /* Черный цвет для "ТОВАРОВ" */
 }
 
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden; 
+}
