--- a/app/components/BrandSlider.module.css
+++ b/app/components/BrandSlider.module.css
@@ -50,6 +50,7 @@
   height: 77px;
   border-radius: 10px;
   background: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,4 +77,51 @@
   width: 26px;
   background: rgb(255, 200, 94);
   opacity: 1;
+}
+
+
+@media (max-width: 768px) {
+  .sliderContainer {
+    width: 90%;
+    padding-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .header {
+    margin-bottom: 10px;
+    position: relative;
+    padding: 0 10px;
+  }
+
+  .title {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: left;
+    text-transform: uppercase;
+    color: var(--primary-color);
+    margin-bottom: 5px;
+  }
+
+  .subtitle {
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: left;
+    color: rgb(63, 78, 101);
+  }
+
+  .slide {
+    gap: 20px;
+    margin-top: 10px;
+  }
+
+  .dot {
+    width: 10px;
+    height: 5px;
+  }
+
+  .activeDot {
+    width: 20px;
+  }
 }
