--- a/app/components/BrandSlider.module.css
+++ b/app/components/BrandSlider.module.css
@@ -32,19 +32,6 @@
   color: black; 
 }
 
-.slidesWrapper {
-  display: flex;
-  transition: transform 0.5s ease;
-}
-
-.slide {
-  display: flex;
-  gap: 88px;
-  justify-content: start;
-  width: 100%;
-  flex: 0 0 100%;
-}
-
 .imageContainer {
   width: 102px;
   height: 77px;
@@ -56,13 +43,20 @@
   justify-content: center;
 }
 
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+.swiper {
+  width: 100%;
 }
 
-.dot {
+.sliderContainer .swiper-pagination {
+  position: absolute;
+  bottom: -30px; 
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.sliderContainer .swiper-pagination-bullet {
   width: 16px;
   height: 7px;
   border-radius: 100px;
@@ -73,12 +67,17 @@
   transition: all 0.3s ease;
 }
 
-.activeDot {
+.sliderContainer .swiper-pagination-bullet-active {
   width: 26px;
   background: rgb(255, 200, 94);
   opacity: 1;
 }
 
+.slideContent {
+  display: flex;
+  gap: 20px; 
+  justify-content: start;
+}
 
 @media (max-width: 768px) {
   .sliderContainer {
@@ -110,18 +109,13 @@
     text-align: left;
     color: rgb(63, 78, 101);
   }
-
-  .slide {
-    gap: 20px;
-    margin-top: 10px;
-  }
-
-  .dot {
+  
+  .swiper-pagination-bullet {
     width: 10px;
     height: 5px;
   }
 
-  .activeDot {
+  .swiper-pagination-bullet-active {
     width: 20px;
   }
 }
