--- a/app/contacts/contact.module.css
+++ b/app/contacts/contact.module.css
@@ -169,3 +169,31 @@
     height: auto; 
 }
 
+@media (max-width: 768px) {
+    .cont img {
+        position: relative;
+        width: 290px;
+        height: 600px;
+        left: 15px;
+        border-radius: 10px;
+        object-fit: cover; 
+        object-position: center; 
+    }
+
+    .rectangle {
+        width: 270px; 
+        height: 319px; 
+        left: 25px; 
+        top: 15px; 
+        border-radius: 10px;
+    }
+
+    .contact-title,
+    .contact-subtitle,
+    .contact-info,
+    .dashed-line,
+    .document-block {
+        display: none;
+    }
+}
+
