--- a/app/components/Categories.modules.css
+++ b/app/components/Categories.modules.css
@@ -34,11 +34,9 @@
     text-align: center;
     margin-right: 15px; /* Отступ между карточками справа */
     text-decoration: none;
-    color: black; 
-    background-color: #f9f6f2; 
+    color: black;  
     width: 250px; 
     height: 291px; 
-    border-radius: 10px; 
     display: flex;
     flex-direction: column; 
     justify-content: flex-end; 
@@ -46,9 +44,9 @@
 }
 
 .category-image {
-    width: 100%; 
-    height: 250px; 
-    border-radius: 10px 10px 0 0; 
+    height: 250px;
+    background-color: #f9f6f2;
+    border-radius: 20px;  
 }
 
 .category-name {
@@ -94,5 +92,51 @@ html,body {
         /* position: relative; */
         width: 90%;
         margin: 0 auto;
+    }
+
+    .categories-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .category-card{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        height: 184px;
+        width: 140px;
+        margin-left: 10px;
+        margin-top: 20px;
+    }
+
+    .category-image{
+        height: 140px;
+        width: 140px;
+    }
+
+    .category-name {
+        width: 104px;
+        font-size: 12px;
+        font-weight: 500;
+    }
+
+    .title{
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.2;
+        text-align: left;
+       text-transform: uppercase;
+        color: var(--primary-color);
+        margin-bottom: 5px;
+    }
+
+    .subtitle{
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 1.2;
+    text-align: left;
+    color: rgb(63, 78, 101);
     }
 }
