--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -87,7 +87,7 @@
 
     .price{
         display: block;
-
+        margin-bottom: 80%;
     .price_list_title{
         display: none;
     }
@@ -95,8 +95,8 @@
     .button{
         display: block;
         position: absolute;
-        top: 233%;
-        left: 49%;
+        margin-top: -128%;
+        margin-left: 50%;
         }
     .button Button{
         width: 149px; 
@@ -111,8 +111,8 @@
     .connection_mas{
         display: block;
         position: absolute;
-        top: 292%;
-        left: 50%;
+        margin-bottom: 10%;
+        margin-left: 50%;
         }
     
     
@@ -136,7 +136,8 @@
     
     }
     
-        
+       
+
     .p {
         font-size: 20px;
         font-weight: bold;
@@ -147,12 +148,14 @@
     .ul {
         list-style-type: none;
         padding-inline-start: 0;
+        
     }
 
     
     .list{
         margin: 0;
         padding-inline-start: 0;
+        list-style-type: none;
     }
     
     
