--- a/app/components/Brends/BrandSlider.module.scss
+++ b/app/components/Brends/BrandSlider.module.scss
@@ -15,7 +15,6 @@ $color_3: var(--gray);
 	  }
 	  
 	  .title {
-		font-weight: bold; 
 		font-size: 48px; 
 		line-height: 48px; 
 		color: var(--primary-color); 
@@ -35,12 +34,24 @@ $color_3: var(--gray);
 		color: var(--black); 
 	  }
 
-	.swiper__custom {
+	  .slideContent {
+		height: 140px; 
+		min-width: calc(100% + 2px);           
+		display: flex;
+		justify-content: center; 
+		align-items: center;    
+		overflow: hidden;  
+	  }
+	  
+	  img {
+		max-height: 100%;             
+		object-fit: contain; 	
+	  }
 
+	.swiper__custom {
 		.swiper__pagination {
-			bottom: 0;
-			top: 0;
-			left: 0;
+			position: absolute;
+			bottom: 10px;
 			width: 100%;
 			position: relative;
 			height: 20px;
@@ -67,33 +78,32 @@ $color_3: var(--gray);
 			}
 		}
 	}
-
 }
 
 @media (max-width: 768px) {
 	.sliderContainer {
 	  width: 90%;
-	  padding-top: 10px;
-	  margin-bottom: 20px;
+
+	  .header {
+		position: relative;
+		padding: 0 10px;
+		font-weight: 500;
+		line-height: 120%;
+		letter-spacing: 0%;
+	  }
+	
+	  .title {
+		font-size: 22px;
+		color: var(--primary-color);
+		margin-bottom: 2px;
+	  }
+	
+	  .subtitle {
+		font-size: 12px;
+		font-weight: 300;
+		line-height: 1.2;
+		text-align: left;
+		color: rgb(63, 78, 101);
+	  }
 	}
-  
-	.header {
-	  margin-bottom: 10px;
-	  position: relative;
-	  padding: 0 10px;
-	}
-  
-	.title {
-	  font-size: 20px;
-	  color: var(--primary-color);
-	  margin-bottom: 5px;
-	}
-  
-	.subtitle {
-	  font-size: 12px;
-	  font-weight: 300;
-	  line-height: 1.2;
-	  text-align: left;
-	  color: rgb(63, 78, 101);
-	}
-}
+} 
