--- a/app/components/Header/Header_mobile.module.scss
+++ b/app/components/Header/Header_mobile.module.scss
@@ -135,14 +135,16 @@ $background-color_1: white;
 }
 .catalog_search {
 	display: flex;
-	justify-content: space-around;
 	align-items: center;
+	width: 100%;
+	
 }
 .half_button {
+	width: 50%;
 	display: flex;
-	padding: 10px 70px;
+	padding: 10px 0px;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: center;
 	border: none;
 	background-color: $background-color_1;
 	img {
