--- a/app/components/Categories/Categories.modules.scss
+++ b/app/components/Categories/Categories.modules.scss
@@ -81,27 +81,27 @@ body {
 }
 @media (max-width: 768px) {
 	.container {
-		width: 90%;
+		width: 100%;
 		margin: 0 auto;
 	}
 	.categories-wrapper {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		margin: -5% -5%;
 	}
 	.category-card {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: flex-start;
-		height: 184px;
-		width: 140px;
-		margin-left: 10px;
-		margin-top: 20px;
+		height: 40%;
+		width: 40%;
+		margin: 5% 5%;
 	}
 	.category-image {
-		height: 140px;
-		width: 140px;
+		width: 120%;
+		height: auto;
 	}
 	.category-name {
 		width: 104px;
