--- a/app/components/SaleItems/saleItems.module.scss
+++ b/app/components/SaleItems/saleItems.module.scss
@@ -35,7 +35,6 @@ $font-family_1: Inter, sans-serif;
 	border-radius: 10px;
 	box-shadow: 0px 14px 39px -11px var(--gray);
 	background: var(--white);
-	position: relative;
 }
 .image {
 	border-radius: 10px 10px 0 0;
@@ -43,12 +42,6 @@ $font-family_1: Inter, sans-serif;
 	object-fit: cover;
 	display: block;
 	margin: 0 auto;
-}
-.description {
-	padding: 20px;
-	font-family: $font-family_1;
-	font-size: 16px;
-	color: $color_2;
 }
 .popularTag {
 	position: relative;
@@ -189,6 +182,7 @@ $font-family_1: Inter, sans-serif;
 	letter-spacing: 0%;
 	text-align: left;
 }
+
 @media (max-width: 768px) {
 	.saleItemsContainer {
 		width: 100%;
@@ -208,39 +202,21 @@ $font-family_1: Inter, sans-serif;
 		text-transform: uppercase;
 	}
 	.grid {
-		display: none;
+		display: flex;
+		overflow-x: scroll;
+		scroll-snap-type: x mandatory;
+		width: 100%;
+		padding: 30px;
 	}
-	.card {
-		display: none;
+	.grid::-webkit-scrollbar{
+			width: 0;
+		}
+
+	.card{
+		scroll-snap-align: center;
 	}
-	.image {
-		display: none;
-	}
-	.description {
-		display: none;
-	}
-	.popularTag {
-		display: none;
-	}
-	.volumeText {
-		display: none;
-	}
-	.productDescription {
-		display: none;
-	}
-	.barcode {
-		display: none;
-	}
-	.producer {
-		display: none;
-	}
-	.brand {
-		display: none;
-	}
-	.price {
-		display: none;
-	}
-	.button {
-		display: none;
+
+	.productDescription{
+		width: 250px;
 	}
 }
