--- a/app/components/Banner/Banner.module.scss
+++ b/app/components/Banner/Banner.module.scss
@@ -10,7 +10,7 @@ $background-color_1: var(--primary-color);
 }
 .banner {
 	position: absolute;
-	background-image: url("/banner.png");
+	background-image: url("/kis_project_DANDA/banner.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
