добавил часть неработающей локализации

--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -29,6 +29,12 @@
     padding: 5px;
 }
 
+.list{
+    margin: 0;
+    padding-inline-start: 0;
+    list-style-type: none;
+}
+
 #li {
     margin-bottom: 15px;
 }
