--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: rgb(255, 200, 94);
+    --dark-yellow: rgb(236, 169, 35);
     --black: rgb(17, 17, 17);
     --white: rgb(255, 255, 255);
     --dark-gray: #333;
