--- a/app/components/ProductCard/ProductCard.module.scss
+++ b/app/components/ProductCard/ProductCard.module.scss
@@ -10,7 +10,83 @@
     display: flex;
     width: 100%;
     overflow: hidden;
-  }
+  } 
+
+  .promotionContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.promotionBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 316px; 
+  height: 77px; 
+  border-radius: 10px;
+  box-shadow: 0px 15px 70px -11px rgba(43, 28, 1, 0.04);
+  background: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--blue);
+}
+
+
+.shareButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 7px;
+  height: 77px;
+  border: none;
+  border-radius: 10px;
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 15px 70px -11px rgba(43, 28, 1, 0.04);
+  cursor: pointer;
+}
+
+.promotionText {
+  flex: 1;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: var(--blue);
+}
+
+.promotionText span {
+  font-weight: 700;
+}
+
+.priceListButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 186px;
+  height: 77px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 15px 70px -11px rgba(43, 28, 1, 0.04);
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--blue);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.priceListButton a {
+  text-decoration: none;
+  color: var(--blue);
+}
+
   
   .imageSection {
     display: flex;
@@ -23,8 +99,10 @@
   }
   
   .productImage {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
+    max-height: 500px; 
+    object-fit: contain;
   }
   
   .infoSection {
@@ -70,9 +148,19 @@
   .priceContainer {
     display: flex;
     align-items: center;
-    gap: 20px; /* Уменьшено расстояние */
+    gap: 20px;
     margin: 10px 0 40px;
-    justify-content: flex-start; /* Выравнивание по левому краю */
+    justify-content: flex-start; 
+  }
+
+  .priceAndActionsContainer {
+    display: flex; 
+    align-items: center; 
+    gap: 40px; 
+  }
+  
+  .productPrice {
+    margin-right: 20px; 
   }
   
   .productPrice {
