готовая карточка товара

--- a/app/components/Banner/Banner.module.scss
+++ b/app/components/Banner/Banner.module.scss
@@ -88,7 +88,7 @@ $background-color_1: var(--primary-color);
 	-o-transition: all 0.5s;
 	transition: all 0.5s;
 	&:hover {
-		background: rgb(253, 215, 139);
+		background: var(--primary-color);
 		box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 		-webkit-transition: all 0.5s;
 		-moz-transition: all 0.5s;
@@ -96,7 +96,7 @@ $background-color_1: var(--primary-color);
 		transition: all 0.5s;
 	}
 	&:active {
-		background: rgb(227, 154, 7);
+		background: var(--dark-yellow);
 		box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 		-webkit-transition: all 0.5s;
 		-moz-transition: all 0.5s;
@@ -104,7 +104,7 @@ $background-color_1: var(--primary-color);
 		transition: all 0.5s;
 	}
 	&:focus {
-		background: rgb(227, 154, 7);
+		background: var(--dark-yellow);
 		box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 		-webkit-transition: all 0.5s;
 		-moz-transition: all 0.5s;
