--- a/app/components/Brends/BrandSlider.module.scss
+++ b/app/components/Brends/BrandSlider.module.scss
@@ -102,7 +102,7 @@ $color_3: var(--gray);
 		font-weight: 300;
 		line-height: 1.2;
 		text-align: left;
-		color: rgb(63, 78, 101);
+		color: var(--gray);
 	  }
 	}
 } 
