--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #3F4E65;
-    color: #fff;
+    background-color: var(--gray);
+    color: var(--white);
     padding: 20px 50px 20px;
 }
 
@@ -49,10 +49,10 @@
     background-color: var(--primary-color);
     display: inline-block;
     margin: 0 auto;
-    color: white;
+    color: var(--white);
     border: none;
     padding: 0;
-    font-size: 15px;
+    font-size: 14px;
     height: 50px;
     width: 130px;
     cursor: pointer;
@@ -62,12 +62,12 @@
 }
 
 .input_mail{
-    background-color: #ffffff;
+    background-color: var(--white);
     display: inline-block;
     margin: 0 auto;
-    color: rgb(83, 83, 83);
+    color: var(--gray);
     border: none;
-    padding:  0px 15px 0px;
+    padding:  0px 14px 0px;
     font-size: 10px;
     height: 30px;
     width: 130px;
@@ -78,8 +78,8 @@
 @media (max-width: 768px){
 
     .footer {
-        background-color: #3F4E65;
-        color: #fff;
+        background-color: var(--gray);
+        color: var(--white);
         padding: 5% 2% 5%;
         
     
@@ -187,10 +187,10 @@
     }
     
     .input_mail{
-        background-color: #ffffff;
+        background-color: var(--white);
         display: inline-block;
         margin: 0 auto;
-        color: rgb(83, 83, 83);
+        color: var(--gray);
         border: none;
         padding:  0px 15px 0px;
         font-size: 10px;
