--- a/app/components/contacts/contact.module.scss
+++ b/app/components/contacts/contact.module.scss
@@ -24,7 +24,7 @@
     width: 735px;
     height: 424px;
     padding: 48px;
-    background: rgba(255, 255, 255, 0.3);
+    background: var(dark-white);
     border-radius: 8px;
     backdrop-filter: blur(12px);
   }
@@ -41,7 +41,7 @@
     font-size: 20px;
     font-weight: 300;
     line-height: 24px;
-    color: rgb(63, 78, 101);
+    color: var(--gray);
 	font-family: Inter, sans-serif;
     margin-bottom: 15px;
   }
@@ -80,7 +80,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 18.2px;
-    color: rgb(63, 78, 101);
+    color: var(--gray);
 	font-family: Inter, sans-serif;
   }
 
@@ -105,7 +105,7 @@
         width: 90%;
         height: 400px;
         padding: 25px;
-        background: rgba(255, 255, 255, 0.3);
+        background: var(dark-white);
         border-radius: 8px;
         backdrop-filter: blur(12px);
       }
