--- a/app/components/ProductCard/ProductCard.module.scss
+++ b/app/components/ProductCard/ProductCard.module.scss
@@ -402,44 +402,133 @@
     }
   }
   
-  
 
   @media (max-width: 768px) {
     .container {
       width: 100%;
-      margin: 0 auto 60px;
+      margin: 0 auto 40px;
+      padding: 0 16px;
     }
+    
     .productCard {
       flex-direction: column;
-    }
-  
-    .quantityContainer,
-    .actions {
-      gap: 10px;
-      justify-content: space-between;
-    }
-  
-    .priceContainer {
-      justify-content: flex-start; 
       gap: 20px;
-      margin: 10px 0 30px;
     }
   
-    .shareButton,
+    .imageSection {
+      max-width: 100%; 
+      justify-content: center;
+      align-items: center;
+      padding: 10px 0;
+    }
+  
+    .productImage {
+      max-width: 80%; 
+      height: auto;
+    }
+  
+    .infoSection {
+      padding: 16px; 
+      max-width: 100%;
+    }
+  
+    .productHeader { 
+      align-items: flex-start;
+      gap: 4px;
+    }
+  
+    .productBrand {
+      display: none;
+    }
+
+    .productTitle {
+      font-size: 18px; 
+      line-height: 24px;
+      margin-bottom: 4px;
+    }
+  
+    .priceAndActionsContainer {
+      flex-direction: column; 
+      align-items: stretch; 
+      gap: 10px; 
+    }
+  
+    .productPrice {
+      font-size: 20px;
+      line-height: 30px;
+      margin-bottom: 10px; 
+    }
+
+    .addToCartButton {
+      width: auto;            
+      height: 100px;           
+      font-size: 16px;        
+      text-align: center;    
+      padding: 10px;          
+    }
+  
+    .quantityContainer {
+      gap: 18px;
+      margin-left: 40px;
+      margin-top: -50px;
+    }
+  
+    .quantityButton {
+      width: 42px;
+      height: 28px;
+      font-size: 12px;
+    }
+  
+    .promotionContainer {
+      flex-direction: column; 
+      gap: 10px;
+      align-items: center;
+    }
+  
+    .promotionBox {
+      width: 328px;
+      height: auto;
+      padding: 12px;
+      font-size: 12px;
+      margin-top: 16px;
+    }
+  
     .priceListButton {
-      padding: 12px 20px;
+      width: 350px; 
+      height: 80px;
+      padding: 12px;
+      font-size: 16px;
+    }
+  
+    .shareButton {
+      width: auto;
+      height: 50px;
+      padding: 10px 12px;
+    }
+
+    .ButtonBox {
+      width: 60px;
+      height: 60px;
+      margin-top: -100px;
+      margin-left: 290px;
     }
   
     .descriptionTitle {
-      font-size: 13px;
-      line-height: 20px;
+      font-size: 14px;
     }
   
-    .productVolume {
+    .descriptionText {
+      font-size: 12px;
+      line-height: 18px;
+    }
+  
+    .sizeInfo {
       display: none;
     }
   
     .divider {
+      margin: 20px 0;
       width: 100%;
     }
   }
+  
