--- a/app/[lng]/components/SaleItems/saleItems.module.scss
+++ b/app/[lng]/components/SaleItems/saleItems.module.scss
@@ -185,8 +185,9 @@ $font-family_1: Inter, sans-serif;
 
 @media (max-width: 768px) {
 	.saleItemsContainer {
-		width: 100%;
+		width: 80%;
 		padding: 0 15px;
+		margin-left: 0px;
 	}
 	.title {
 		position: relative;
