Fixed after latest PR

--- a/app/[lng]/components/Categories/Categories.modules.scss
+++ b/app/[lng]/components/Categories/Categories.modules.scss
@@ -78,7 +78,7 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
-		margin: -5% -5%;
+		margin: 0;
 	}
 	.category-card {
 		display: flex;
