--- a/app/[lng]/components/Header/header.module.scss
+++ b/app/[lng]/components/Header/header.module.scss
@@ -50,7 +50,7 @@ $background-color_1: var(--white);
 	align-self: center;
 }
 
-.a_1 {
+.primaryButton {
 	text-decoration: none;
 	margin-left: 28px;
 	margin-right: 28px;
@@ -64,7 +64,7 @@ $background-color_1: var(--white);
 	border-left: 1px dashed var(--primary-header)
 }
 
-.a_2 {
+.secondaryButton {
 	text-decoration: none;
 	margin-left: 28px;
 	font-size: 14px;
