--- a/app/[lng]/components/Carousel/Carousel.module.css
+++ b/app/[lng]/components/Carousel/Carousel.module.css
@@ -72,8 +72,8 @@
   .container :global(.swiper-button-prev) {
     background-color: var(--white);
     border-radius: 50%;
-    width: 67px;
-    height: 67px;
+    width: 68px;
+    height: 68px;
     color: var(--yellow);
     display: flex;
     justify-content: center;
@@ -134,7 +134,7 @@
   }
   
   
-  @media (max-width: 1024px) {
+  @media (max-width: var(--breakpoint-desktop)) {
     .container {
       height: 320px;
       width: 95%;
@@ -146,7 +146,7 @@
     }
   
     .slideContent {
-      padding-left: 45px;
+      padding-left: 44px;
     }
   
     .slideDuration {
@@ -174,7 +174,7 @@
     }
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: var(--breakpoint-tablet)) {
     .container {
       width: 90%;
       height: auto;
