--- a/app/components/Footer/footer.module.scss
+++ b/app/components/Footer/footer.module.scss
@@ -37,6 +37,13 @@
     list-style-type: none;
 }
 
+.connection_mas img{
+    padding: 1%;
+}
+
+.contact_icons img{
+    padding: 1%;
+}
 
 .price_button{
     background-color: var(--primary-color);
