--- a/app/[lng]/components/contacts/contact.module.scss
+++ b/app/[lng]/components/contacts/contact.module.scss
@@ -60,7 +60,7 @@
     margin-left: 60px;
   }
   
-  .location-icon {
+  .location_icon {
     width: 20px;
     height: 20px;
     object-fit: contain;
