Версия каталога воскресенье 22.12

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
     --dark-gray: #333;
     --black: rgb(17, 17, 17);
     --primary-color: rgb(255, 200, 94);
+    --primary-colorr: #ffefd2;
     --dark-yellow: rgb(236, 169, 35);
     --brown: rgba(255, 198, 80, 0.3);
     --green: rgb(31, 216, 93);
