--- a/app/[lng]/components/Catalog_list/Catalog_list.module.scss
+++ b/app/[lng]/components/Catalog_list/Catalog_list.module.scss
@@ -161,6 +161,7 @@ $font-family_1: Inter, sans-serif;
 
 .price {
   position: absolute;
+  white-space: nowrap;
   width: 70px;
   height: 22px;
   left: 24px;
