--- a/app/[lng]/components/Basket/Basket.module.scss
+++ b/app/[lng]/components/Basket/Basket.module.scss
@@ -1,7 +1,8 @@
 .container {
     padding: 20px;
     font-family: Arial, sans-serif;
-    margin-left: 100px;
+    margin: 0 auto;
+    width: 80%;
     display: flex;
     flex-direction: column;
 }
@@ -137,4 +138,14 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 18px;
+}
+
+.del_button{
+    margin-top: 48px;
+}
+
+.basket_foot{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
