--- a/app/[lng]/catalog/[category]/Cetagory.module.scss
+++ b/app/[lng]/catalog/[category]/Cetagory.module.scss
@@ -1,21 +1,13 @@
 $color_1: var(--primary-color);
 
-
 .main_text {
-    font-size: 16px;
-    white-space: nowrap;
+    font-size: medium;
 }
 
 .all_page {
     display: flex;
-    gap: 108px;
     width: 80%;
     margin: 0 auto;
-
-    @media(max-width: 768px) {
-        display: flex;
-        flex-direction: column;
-      }
 }
 
 .filters {
@@ -25,7 +17,6 @@ $color_1: var(--primary-color);
     padding: 10px;
 
     &_maintext {
-        margin-top: 30px;
         font-size: medium;
     }
 
@@ -41,28 +32,11 @@ $color_1: var(--primary-color);
         padding-bottom: 10px;
     }
 
-    &_separator {
-        border-bottom: 2px dotted var(--dark-gray); 
-        width: 260px; 
-        margin: 10px 0; 
-    }
-
     &_manufacturers {
         display: flex;
         flex-direction: column;
         padding-left: 10px;
         padding-bottom: 10px;
-    }
-
-    &_manufacturers, &_brand {
-        display: flex;
-        flex-direction: column;
-        padding-left: 10px;
-        padding-bottom: 10px;
-
-        > :first-child {
-            margin-top: 10px;
-        }
     }
 
     &_label {
@@ -81,25 +55,18 @@ $color_1: var(--primary-color);
 
     &_buttons {
         display: flex;
+        margin-left: -10px;
         margin-top: 10px;
         justify-content: space-around;
     }
 
-    &_buttons > * {
-        margin-right: 0; /* Отступ между кнопками */
-    }
-    
-    &_buttons > *:last-child {
-        margin-left: 10px;
-    }
-
     &_price {
         display: flex;
-        height: 24px;
+        height: 16px;
         width: 44%;
         align-items: center;
         justify-content: center;
-        background-color: var(--primary-colorr);
+        background-color: var(--primary-color);
         border: none;
         border-radius: 80px;
 
@@ -111,7 +78,7 @@ $color_1: var(--primary-color);
             border: none;
             font-size: 12px;
             text-align: center;
-            color: var(--dark-gray);
+            color: var(--light-gray);
         }
 
         input::-webkit-outer-spin-button,
